# rtmidi-interface

./: .gitignore  CMakeLists.txt
CMake/: FindRTMIDI.cmake
Examples/: CMakeLists.txt  Main.cpp
RTMIDI/: CMakeLists.txt  Common.h  Compilers.h  Interface.cpp  Interface.h  MIDIMessage.cpp  MIDIMessage.h  RTLib.cpp  RTLib.h  Strings.cpp  Strings.h  WarningsStart.h
